Add MiG Base64; fix typos (see IO); cleanup warnings